| Bug #6914 | problems using time() / date() output in expressions | ||
|---|---|---|---|
| Submitted: | 1 Dec 2004 13:26 | Modified: | 30 Dec 2004 18:45 |
| Reporter: | Axel Schwenke | ||
| Status: | Closed | ||
| Category: | Server | Severity: | S2 (Serious) |
| Version: | 4.1.7 | OS: | Linux (Linux) |
| Assigned to: | Dmitri Lenev | Target Version: | |
[1 Dec 2004 13:26]
Axel Schwenke
[1 Dec 2004 14:34]
Victoria Reznichenko
Verified with 4.1.8
[30 Dec 2004 18:45]
Dmitri Lenev
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
ChangeSet
1.2161 04/12/30 13:39:01 dlenev@brandersnatch.localdomain +3 -0
Fix for bug #6914 "Problems using time()/date() output in expressions".
