Fix for bug #6914 "Problems using time()/date() output in expressions".

When we cast datetime value to DATE (TIME) type we should throw away its
time (date) part. This was not done properly if CAST() function was used
in datetime expressions.